// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListGrid should render noRows 1`] = `
<VirtualizedList(ListTable)
  collection={Array []}
  disableHeader={false}
  height={600}
  id="my-list"
  isSelected={[MockFunction]}
  noRowsRenderer={[Function]}
  rowHeight={50}
  width={1024}
>
  <Table
    className="tc-list-table theme-tc-list-table"
    disableHeader={false}
    estimatedRowSize={30}
    gridClassName="theme-grid tc-dropdown-container"
    headerHeight={40}
    headerRowRenderer={[Function]}
    headerStyle={Object {}}
    height={600}
    id="my-list"
    noRowsRenderer={[Function]}
    onRowsRendered={[Function]}
    onScroll={[Function]}
    overscanIndicesGetter={[Function]}
    overscanRowCount={10}
    rowClassName={[Function]}
    rowCount={0}
    rowGetter={[Function]}
    rowHeight={50}
    rowRenderer={[Function]}
    rowStyle={Object {}}
    scrollToAlignment="auto"
    scrollToIndex={-1}
    style={Object {}}
    width={1024}
  >
    <div
      aria-colcount={2}
      aria-rowcount={0}
      className="ReactVirtualized__Table tc-list-table theme-tc-list-table"
      id="my-list"
      role="grid"
      style={Object {}}
    >
      <div
        className="ReactVirtualized__Table__headerRow tc-list-item theme-row theme-row"
        role="row"
        style={
          Object {
            "height": 40,
            "overflow": "hidden",
            "paddingRight": 0,
            "width": 1024,
          }
        }
      >
        <div
          className="ReactVirtualized__Table__headerColumn"
          key="Header-Col0"
          role="columnheader"
          style={
            Object {
              "WebkitFlex": "0 1 0px",
              "flex": "0 1 0px",
              "msFlex": "0 1 0px",
            }
          }
        >
          <span
            className="ReactVirtualized__Table__headerTruncatedText"
            key="label"
            title="Id"
          >
            Id
          </span>
        </div>
        <div
          className="ReactVirtualized__Table__headerColumn"
          key="Header-Col1"
          role="columnheader"
          style={
            Object {
              "WebkitFlex": "0 1 0px",
              "flex": "0 1 0px",
              "msFlex": "0 1 0px",
            }
          }
        >
          <span
            className="ReactVirtualized__Table__headerTruncatedText"
            key="label"
            title="Name"
          >
            Name
          </span>
        </div>
      </div>
      <Grid
        aria-label="grid"
        aria-readonly={true}
        autoContainerWidth={true}
        autoHeight={false}
        autoWidth={false}
        cellRangeRenderer={[Function]}
        cellRenderer={[Function]}
        className="ReactVirtualized__Table__Grid theme-grid tc-dropdown-container"
        columnCount={1}
        columnWidth={1024}
        containerRole="rowgroup"
        containerStyle={Object {}}
        disableHeader={false}
        estimatedColumnSize={100}
        estimatedRowSize={30}
        getScrollbarSize={[Function]}
        gridClassName="theme-grid tc-dropdown-container"
        headerHeight={40}
        headerRowRenderer={[Function]}
        headerStyle={Object {}}
        height={560}
        isScrollingOptOut={false}
        noContentRenderer={[Function]}
        noRowsRenderer={[Function]}
        onRowsRendered={[Function]}
        onScroll={[Function]}
        onScrollbarPresenceChange={[Function]}
        onSectionRendered={[Function]}
        overscanColumnCount={0}
        overscanIndicesGetter={[Function]}
        overscanRowCount={10}
        role="rowgroup"
        rowClassName={[Function]}
        rowCount={0}
        rowGetter={[Function]}
        rowHeight={50}
        rowRenderer={[Function]}
        rowStyle={Object {}}
        scrollToAlignment="auto"
        scrollToColumn={-1}
        scrollToIndex={-1}
        scrollToRow={-1}
        scrollbarWidth={0}
        scrollingResetTimeInterval={150}
        style={
          Object {
            "overflowX": "hidden",
          }
        }
        tabIndex={0}
        width={1024}
      >
        <div
          aria-label="grid"
          aria-readonly={true}
          className="ReactVirtualized__Grid ReactVirtualized__Table__Grid theme-grid tc-dropdown-container"
          onScroll={[Function]}
          role="rowgroup"
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "boxSizing": "border-box",
              "direction": "ltr",
              "height": 560,
              "overflowX": "hidden",
              "overflowY": "hidden",
              "position": "relative",
              "width": 1024,
              "willChange": "transform",
            }
          }
          tabIndex={0}
        >
          <div>
            No rows
          </div>
        </div>
      </Grid>
    </div>
  </Table>
</VirtualizedList(ListTable)>
`;

exports[`ListGrid should render react-virtualized table 1`] = `
<Table
  className="tc-list-table theme-tc-list-table"
  disableHeader={false}
  estimatedRowSize={30}
  gridClassName="theme-grid tc-dropdown-container"
  headerHeight={40}
  headerRowRenderer={[Function]}
  headerStyle={Object {}}
  height={600}
  id="my-list"
  noRowsRenderer={[Function]}
  onRowsRendered={[Function]}
  onScroll={[Function]}
  overscanIndicesGetter={[Function]}
  overscanRowCount={10}
  rowClassName={[Function]}
  rowCount={2}
  rowGetter={[Function]}
  rowHeight={50}
  rowRenderer={[Function]}
  rowStyle={Object {}}
  scrollToAlignment="auto"
  scrollToIndex={-1}
  style={Object {}}
  width={1024}
>
  <Content
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    dataKey="id"
    defaultSortDirection="ASC"
    flexGrow={0}
    flexShrink={1}
    headerRenderer={[Function]}
    label="Id"
    style={Object {}}
    width={0}
  />
  <Content
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    dataKey="name"
    defaultSortDirection="ASC"
    flexGrow={0}
    flexShrink={1}
    headerRenderer={[Function]}
    label="Name"
    style={Object {}}
    width={0}
  />
  <Content
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    dataKey="description"
    defaultSortDirection="ASC"
    flexGrow={0}
    flexShrink={1}
    headerRenderer={[Function]}
    label=""
    style={Object {}}
    width={0}
  />
</Table>
`;

exports[`ListGrid should render react-virtualized table without header 1`] = `
<Table
  className="tc-list-table theme-tc-list-table"
  disableHeader={true}
  estimatedRowSize={30}
  gridClassName="theme-grid tc-dropdown-container"
  headerHeight={40}
  headerRowRenderer={[Function]}
  headerStyle={Object {}}
  height={600}
  id="my-list"
  noRowsRenderer={[Function]}
  onRowsRendered={[Function]}
  onScroll={[Function]}
  overscanIndicesGetter={[Function]}
  overscanRowCount={10}
  rowClassName={[Function]}
  rowCount={2}
  rowGetter={[Function]}
  rowHeight={50}
  rowRenderer={[Function]}
  rowStyle={Object {}}
  scrollToAlignment="auto"
  scrollToIndex={-1}
  style={Object {}}
  width={1024}
>
  <Content
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    dataKey="id"
    defaultSortDirection="ASC"
    flexGrow={0}
    flexShrink={1}
    headerRenderer={[Function]}
    label="Id"
    style={Object {}}
    width={0}
  />
  <Content
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    dataKey="name"
    defaultSortDirection="ASC"
    flexGrow={0}
    flexShrink={1}
    headerRenderer={[Function]}
    label="Name"
    style={Object {}}
    width={0}
  />
  <Content
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    dataKey="description"
    defaultSortDirection="ASC"
    flexGrow={0}
    flexShrink={1}
    headerRenderer={[Function]}
    label=""
    style={Object {}}
    width={0}
  />
</Table>
`;

exports[`ListGrid should render table with sort props 1`] = `
<Table
  className="tc-list-table theme-tc-list-table"
  disableHeader={false}
  estimatedRowSize={30}
  gridClassName="theme-grid tc-dropdown-container"
  headerHeight={40}
  headerRowRenderer={[Function]}
  headerStyle={Object {}}
  height={600}
  id="my-list"
  noRowsRenderer={[Function]}
  onRowsRendered={[Function]}
  onScroll={[Function]}
  overscanIndicesGetter={[Function]}
  overscanRowCount={10}
  rowClassName={[Function]}
  rowCount={2}
  rowGetter={[Function]}
  rowHeight={50}
  rowRenderer={[Function]}
  rowStyle={Object {}}
  scrollToAlignment="auto"
  scrollToIndex={-1}
  sort={[MockFunction]}
  sortBy="name"
  sortDirection="DESC"
  style={Object {}}
  width={1024}
>
  <Content
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    dataKey="id"
    defaultSortDirection="ASC"
    flexGrow={0}
    flexShrink={1}
    headerRenderer={[Function]}
    label="Id"
    style={Object {}}
    width={0}
  />
  <Content
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    dataKey="name"
    defaultSortDirection="ASC"
    flexGrow={0}
    flexShrink={1}
    headerRenderer={[Function]}
    label="Name"
    style={Object {}}
    width={0}
  />
  <Content
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    dataKey="description"
    defaultSortDirection="ASC"
    flexGrow={0}
    flexShrink={1}
    headerRenderer={[Function]}
    label=""
    style={Object {}}
    width={0}
  />
</Table>
`;
